--- a/app/src/main/res/layout/activity_request_permissions.xml
+++ b/app/src/main/res/layout/activity_request_permissions.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="24dp"
+        android:visibility="gone"
         app:cardCornerRadius="6dp"
         app:cardElevation="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
