--- a/app/src/main/res/layout/activity_request_permissions.xml
+++ b/app/src/main/res/layout/activity_request_permissions.xml
@@ -1,43 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/SplashScreenTheme"
-    tools:context=".ui.home.RequestPermissionsActivity">
+    android:id="@+id/cvRequiresPermissions"
+    style="@style/Theme.CapstoneProject.Card"
+    tools:context=".ui.landing.RequestPermissionsActivity">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cvRequiresPermissions"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="24dp"
-        android:visibility="gone"
-        app:cardCornerRadius="6dp"
-        app:cardElevation="12dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        android:orientation="vertical"
+        android:padding="16dp">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/tvRequiresPermissions"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:layout_marginBottom="16dp"
+            android:text="@string/app_require_permission"
+            app:layout_constraintBottom_toTopOf="@+id/materialButton" />
 
-            <TextView
-                android:id="@+id/tvRequiresPermissions"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:text="@string/app_require_permission"
-                app:layout_constraintBottom_toTopOf="@+id/materialButton" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnRequest"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/allow_permissions" />
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnRequest"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/allow_permissions" />
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
