--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,13 +19,23 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="SplashScreenTheme" parent="Theme.CapstoneProject">
+    <style name="Theme.CapstoneProject.SplashScreenTheme" parent="Theme.CapstoneProject.NoActionBar">
         <item name="android:background">@color/design_default_color_primary</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
     </style>
 
-    <style name="SplashScreenTheme.Title" parent="TextAppearance.AppCompat">
+    <style name="Theme.CapstoneProject.Card" parent="Base.CardView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">24dp</item>
+        <item name="cardElevation">16dp</item>
+        <item name="cardCornerRadius">8dp</item>
+    </style>
+
+    <style name="Theme.CapstoneProject.SplashScreenTheme.Title" parent="TextAppearance.AppCompat">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">28sp</item>
         <item name="android:textStyle">bold|italic</item>
         <item name="android:textColor">@color/design_default_color_on_primary</item>
