--- a/app/src/main/res/layout/card_request_permission.xml
+++ b/app/src/main/res/layout/card_request_permission.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cvRequiresPermissions"
-    style="@style/Theme.CapstoneProject.Card"
-    tools:context=".ui.landing.RequestPermissionsActivity">
+    style="@style/Theme.CapstoneProject.Card.Error"
+    tools:context=".ui.main.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,17 +14,14 @@
 
         <TextView
             android:id="@+id/tvRequiresPermissions"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/Theme.CapstoneProject.Card.Error.Text"
             android:layout_marginBottom="16dp"
             android:text="@string/app_require_permission"
             app:layout_constraintBottom_toTopOf="@+id/materialButton" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnRequest"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            style="@style/Theme.CapstoneProject.Card.Error.Button"
             android:text="@string/allow_permissions" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
