--- a/app/src/main/res/drawable/ic_round_map_24.xml
+++ b/app/src/main/res/drawable/ic_round_map_24.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="@dimen/splash_image"
-    android:height="@dimen/splash_image"
-    android:tint="#FFFFFF"
+    android:width="24dp"
+    android:height="24dp"
+    android:tint="#ffffff"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
